--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "rxjs": "5.4.0",
     "zone.js": "0.8.11",
     "ng2-webstorage": "1.6.2",
-    "chosen-js": "v1.7.0"
+    "chosen-js": "v1.7.0",
+    "bootstrap-notify": "3.1.3"
   },
   "devDependencies": {
     "@angular/cli": "1.0.4",
