--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "zone.js": "0.8.11",
     "ng2-webstorage": "1.6.2",
     "chosen-js": "v1.7.0",
-    "bootstrap-notify": "3.1.3"
+    "bootstrap-notify": "3.1.3",
+    "bootstrap-tooltip": "3.1.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.4",
